docs: record CglibProxyFactory removal in COMPATIBILITY.md
Adds an AOP group to both the English and Chinese removal lists, and updates
the runtime-dependency examples now that Paper downloads byte-buddy.

Refs #188